--- a/src/comparisonTable.html
+++ b/src/comparisonTable.html
@@ -237,12 +237,7 @@
                 padding: 0;
             }
         }
-
-        @media screen and (min-width: 320px) {
-            td {
-                padding: 0 16px !important;
-            }
-        }
+}
     </style>
     <!-- Progressive Enhancements : END -->
 
@@ -291,148 +286,107 @@
 
             <!-- Email Body : BEGIN -->
             <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: auto;">
-         
 
 
-            <!-- copy this into template -->
 
-           <!-- Appointment time : BEGIN -->
-           <tr>
-            <!-- dir=rtl is where the magic happens. This can be changed to dir=ltr to swap the alignment on wide while maintaining stack order on narrow. -->
-            <td dir="ltr" height="100%" valign="top" width="100%"
-                style="font-size:0; padding: 18px 36px 18px 36px; text-align: left; background-color: #ffffff">
-                <!--[if mso]>
+                <!-- copy this into template -->
+
+
+
+                <!-- Advisor module : BEGIN -->
+                <tr>
+                    <!-- dir=rtl is where the magic happens. This can be changed to dir=ltr to swap the alignment on wide while maintaining stack order on narrow. -->
+                    <td dir="ltr" height="100%" valign="top" width="100%"
+                        style="font-size:0; padding: 18px 36px 18px 36px; text-align: left; background-color: #ffffff">
+                        <!--[if mso]>
                 <table role="presentation" border="0" cellspacing="0" cellpadding="0" width="660" style="width: 660px;">
                 <tr>
                 <td valign="top" width="220" style="width: 220px;">
                 <![endif]-->
 
-                <!-- inset div styling -->
-                <div style=" display: block;
-                padding: 24px 32px;
-                background-color: #ffffff;
-                max-width: 100%;
-                border-radius: 10px;
-                border: 1px solid #eeeeee;">
-                    <!--[if mso]>
+                        <!-- inset div styling -->
+                        <div style=" display: block; overflow: hidden; padding: 24px 32px; background-color: #ffffff; max-width: 100%; border-radius: 10px; border: 1px solid #eeeeee;">
+                            <!--[if mso]>
                         </td>
                         <td valign="top" width="440" style="width: 440px;">
                     <![endif]-->
-                    <div style="display:inline-block; margin: 0; max-width: 50%; min-width: 80px; vertical-align:top;"
-                        class="stack-column bttm-sml">
-                        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%"
-                            margin="0">
-                            <tr>
-                                <td dir="ltr" style="font-family: sans-serif; font-size: 15px; color: #555555; text-align: left;" class="center-on-narrow">
-                                    <h3 style="margin: 0; line-height: 2;">
-                                        THUR
-                                    </h3>
-                                    <h1 style="font-size: 46px;  font-weight: 400; margin: 0; padding:0; ">
-                                        12
-                                    </h1>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
+                            <div style="display:inline-block; max-width: 100%; min-width: 80px; vertical-align:top; margin-bottom: 16px;"
+                                class="stack-column bttm-sml">
 
-                    <div style="display:inline-block; margin: 0 -1px; max-width: 420px; min-width:120px; vertical-align:top;"
-                        class="stack-column appt">
-                        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%"
-                            margin="0">
-                            <tr>
-                                <td dir="ltr"
-                                    style="font-family: sans-serif; font-size: 15px; color: #555555; text-align: left;"
-                                    class="center-on-narrow">
-                                    <h3 style="margin: 0 0 6px 0; color: #555555; letter-spacing: 0; ">
-                                        Your appointment is booked for:
-                                    </h3>
-                                    <h1
-                                        style="font-size: 28px; font-weight: 700; margin: 0 0 6px 0; padding:0; ">
-                                        5:00 PM on Thursday 12th June
-                                    </h1>
-                                    <a href="#"
-                                        style=" color: #006af0; border-bottom: 2px solid #006af0; padding-bottom: 1px;">+
-                                        Add to calendar</a>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
+                                <div style="float: left; width: 45%; height: auto;">
+                                    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="50%"
+                                        margin="0">
+                                        <tr>
+                                            <td dir="ltr"
+                                                style="font-family: sans-serif; font-size: 15px; color: #555555; text-align: left;"
+                                                class="center-on-narrow">
+                                                <img src="./img/Natwest.png" alt="Provider logo" width=120>
 
-                </div>
-                <!--[if mso]>
+                                         
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </div>
+
+                                <div style="float: right;  max-width: 45%; min-width:120px; vertical-align:top;"
+                                    class="stack-column appt">
+                                    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" margin="0">
+                                        <tr>
+                                            <td dir="ltr" style="font-family: sans-serif; font-size: 15px; color: #555555; text-align: center;"
+                                                class="center-on-narrow">
+                                                <h2 style="margin: 0; color: #555555; letter-spacing: 0; ">
+                                                    Providers name
+                                                </h2>
+                                                <h1 style="font-size: 3rem; font-weight: 700; margin: 0; padding:0; line-height:1.4;">
+                                                    £656
+                                                </h1>
+                                                <p style="margin: 0; ">per month</p>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </div>
+                        </div>
+                        <div style="max-width: 100%; height: 100%; overflow: hidden;">
+                            <!-- Button : BEGIN -->
+                            <table role="presentation" cellspacing="0" cellpadding="0" border="0" style=" float: left; width: 45%;" >
+                                <tr>
+                                    <td dir="ltr">
+                                <tr>
+                                    <td class="button-td button-td-primary" style="border-radius: 4px; ">
+                                        <a class="button-a button-a-primary" href="https://google.com/"
+                                            style="background: #ffffff; border: 1px solid #006af0; font-family: sans-serif; font-size: 16px; line-height: 15px; 
+                                        text-decoration: none; text-align: center; padding: 16px 32px; color: #006af0; display: block; border-radius: 10px;">
+                                            View deal
+                                        </a>
+                                    </td>
+                                </tr>
+                                </tr>
+                            </table>
+                            <!-- Button : END -->
+                            <!-- Button : BEGIN -->
+                            <table role="presentation" cellspacing="0" cellpadding="0" border="0" style="float: right; width: 45%;">
+                                <tr>
+                                    <td dir="ltr">
+                                <tr>
+                                    <td class="button-td button-td-primary" style="border-radius: 4px; ">
+                                        <a class="button-a button-a-primary" href="https://google.com/"
+                                            style="background: #006af0; border: 1px solid #006af0; font-family: sans-serif; font-size: 16px; line-height: 15px; 
+                                        text-decoration: none; text-align: center; padding: 16px 32px; color: #ffffff; display: block; border-radius: 10px;">
+                                            Get advice
+                                        </a>
+                                    </td>
+                                </tr>
+                                </tr>
+                            </table>
+                        <!-- Button : END -->
+                        </div>
+        </div>
+        <!--[if mso]>
                     </td>
                     </tr>
                     </table>
                 <![endif]-->
-            </td>
-        </tr>
-        <!-- Appointment time : END -->
-
-        <!-- Advisor module : BEGIN -->
-        <tr>
-            <!-- dir=rtl is where the magic happens. This can be changed to dir=ltr to swap the alignment on wide while maintaining stack order on narrow. -->
-            <td dir="ltr" height="100%" valign="top" width="100%"
-                style="font-size:0; padding: 18px 36px 18px 36px; text-align: left; background-color: #ffffff">
-                <!--[if mso]>
-                <table role="presentation" border="0" cellspacing="0" cellpadding="0" width="660" style="width: 660px;">
-                <tr>
-                <td valign="top" width="220" style="width: 220px;">
-                <![endif]-->
-
-                <!-- inset div styling -->
-                <div style=" display: block;
-                padding: 24px 32px;
-                background-color: #ffffff;
-                max-width: 100%;
-                border-radius: 10px;
-                border: 1px solid #eeeeee;">
-                    <!--[if mso]>
-                        </td>
-                        <td valign="top" width="440" style="width: 440px;">
-                    <![endif]-->
-                    <div style="display:inline-block; margin: 0; max-width: 120px; min-width: 80px; vertical-align:top;"
-                        class="stack-column bttm-sml">
-                        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%"
-                            margin="0">
-                            <tr>
-                                <td dir="ltr"
-                                    style="font-family: sans-serif; font-size: 15px; color: #555555; text-align: left;"
-                                    class="center-on-narrow">
-                                    <img src="./img/avatar.png" alt="" width="80">
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-
-                    <div style="display:inline-block; margin: 0 -1px; max-width: 420px; min-width:120px; vertical-align:top;"
-                        class="stack-column appt">
-                        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%"
-                            margin="0">
-                            <tr>
-                                <td dir="ltr"
-                                    style="font-family: sans-serif; font-size: 15px; color: #555555; text-align: left;"
-                                    class="center-on-narrow">
-                                    <h3 style="margin: 0 0 6px 0; color: #555555; letter-spacing: 0; ">
-                                        Your advisor's details:
-                                    </h3>
-                                    <h1
-                                        style="font-size: 28px; font-weight: 700; margin: 0 0 6px 0; padding:0; ">
-                                        Jenny Smith
-                                    </h1>
-                                    <a href="@mail:to"
-                                        style=" color: #006af0; border-bottom: 2px solid #006af0; padding-bottom: 1px;">jenny.smith@mojomortgages.com</a>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-
-                </div>
-                <!--[if mso]>
-                    </td>
-                    </tr>
-                    </table>
-                <![endif]-->
-            </td>
+        </td>
         </tr>
         <!-- Advisor module : END -->
 
@@ -444,6 +398,6 @@
 
 
 
-                </table>
-                </div>
-            </body>
+        </table>
+        </div>
+</body>
