--- a/src/comparisonTable.html
+++ b/src/comparisonTable.html
@@ -236,8 +236,29 @@
             .single-break {
                 padding: 0;
             }
+
+            .full-width {
+                width: 100%;
+            }
+
+            .clear {
+                clear: both;
+            }
+
+            .visible {
+                overflow: visible !important;
+            }
+
+            .center-on-narrow {
+                text-align: center !important;
+            }
+
+            .mb-24-xs {
+                margin-bottom: 24px !important;
+            }
         }
-}
+
+       
     </style>
     <!-- Progressive Enhancements : END -->
 
@@ -305,7 +326,8 @@
                 <![endif]-->
 
                         <!-- inset div styling -->
-                        <div style=" display: block; overflow: hidden; padding: 24px 32px; background-color: #ffffff; max-width: 100%; border-radius: 10px; border: 1px solid #eeeeee;">
+                        <div
+                            style=" display: block; overflow: hidden; padding: 24px 32px; background-color: #ffffff; max-width: 100%; border-radius: 10px; border: 1px solid #eeeeee;">
                             <!--[if mso]>
                         </td>
                         <td valign="top" width="440" style="width: 440px;">
@@ -313,31 +335,34 @@
                             <div style="display:inline-block; max-width: 100%; min-width: 80px; vertical-align:top; margin-bottom: 16px;"
                                 class="stack-column bttm-sml">
 
-                                <div style="float: left; width: 45%; height: auto;">
+                                <div style="float: left; width: 45%; height: auto;" class="full-width clear">
                                     <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="50%"
                                         margin="0">
                                         <tr>
                                             <td dir="ltr"
-                                                style="font-family: sans-serif; font-size: 15px; color: #555555; text-align: left;"
-                                                class="center-on-narrow">
+                                                style="font-family: sans-serif; font-size: 15px; color: #555555; text-align: center;"
+                                                >
                                                 <img src="./img/Natwest.png" alt="Provider logo" width=120>
 
-                                         
+
                                             </td>
                                         </tr>
                                     </table>
                                 </div>
 
                                 <div style="float: right;  max-width: 45%; min-width:120px; vertical-align:top;"
-                                    class="stack-column appt">
-                                    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" margin="0">
+                                    class="stack-column appt clear mb-24-xs">
+                                    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%"
+                                        margin="0">
                                         <tr>
-                                            <td dir="ltr" style="font-family: sans-serif; font-size: 15px; color: #555555; text-align: center;"
+                                            <td dir="ltr"
+                                                style="font-family: sans-serif; font-size: 15px; color: #555555; text-align: center;"
                                                 class="center-on-narrow">
                                                 <h2 style="margin: 0; color: #555555; letter-spacing: 0; ">
                                                     Providers name
                                                 </h2>
-                                                <h1 style="font-size: 3rem; font-weight: 700; margin: 0; padding:0; line-height:1.4;">
+                                                <h1
+                                                    style="font-size: 3rem; font-weight: 700; margin: 0; padding:0; line-height:1.4;">
                                                     £656
                                                 </h1>
                                                 <p style="margin: 0; ">per month</p>
@@ -345,41 +370,42 @@
                                         </tr>
                                     </table>
                                 </div>
-                        </div>
-                        <div style="max-width: 100%; height: 100%; overflow: hidden;">
-                            <!-- Button : BEGIN -->
-                            <table role="presentation" cellspacing="0" cellpadding="0" border="0" style=" float: left; width: 45%;" >
-                                <tr>
-                                    <td dir="ltr">
-                                <tr>
-                                    <td class="button-td button-td-primary" style="border-radius: 4px; ">
-                                        <a class="button-a button-a-primary" href="https://google.com/"
-                                            style="background: #ffffff; border: 1px solid #006af0; font-family: sans-serif; font-size: 16px; line-height: 15px; 
+                            </div>
+                            <div style="max-width: 100%; height: 100%; overflow: hidden;" class="visible">
+                                <!-- Button : BEGIN -->
+                                <table role="presentation" cellspacing="0" cellpadding="0" border="0"
+                                    style=" float: left; width: 45%;" class="full-width mb-24-xs">
+                                    <tr>
+                                        <td dir="ltr">
+                                    <tr>
+                                        <td class="button-td button-td-primary" style="border-radius: 4px; ">
+                                            <a class="button-a button-a-primary" href="https://google.com/"
+                                                style="background: #ffffff; border: 1px solid #006af0; font-family: sans-serif; font-size: 16px; line-height: 15px; 
                                         text-decoration: none; text-align: center; padding: 16px 32px; color: #006af0; display: block; border-radius: 10px;">
-                                            View deal
-                                        </a>
-                                    </td>
-                                </tr>
-                                </tr>
-                            </table>
-                            <!-- Button : END -->
-                            <!-- Button : BEGIN -->
-                            <table role="presentation" cellspacing="0" cellpadding="0" border="0" style="float: right; width: 45%;">
-                                <tr>
-                                    <td dir="ltr">
-                                <tr>
-                                    <td class="button-td button-td-primary" style="border-radius: 4px; ">
-                                        <a class="button-a button-a-primary" href="https://google.com/"
-                                            style="background: #006af0; border: 1px solid #006af0; font-family: sans-serif; font-size: 16px; line-height: 15px; 
-                                        text-decoration: none; text-align: center; padding: 16px 32px; color: #ffffff; display: block; border-radius: 10px;">
-                                            Get advice
-                                        </a>
-                                    </td>
-                                </tr>
-                                </tr>
-                            </table>
-                        <!-- Button : END -->
-                        </div>
+                                                View deal
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    </tr>
+                                </table>
+                                <!-- Button : END -->
+                                <!-- Button : BEGIN -->
+                                <table role="presentation" cellspacing="0" cellpadding="0" border="0" style="float: right; width: 45%;" class="full-width">
+                                    <tr>
+                                        <td dir="ltr">
+                                    <tr>
+                                        <td class="button-td button-td-primary" style="border-radius: 4px; ">
+                                            <a class="button-a button-a-primary" href="https://google.com/"
+                                                style="background: #006af0; border: 1px solid #006af0; font-family: sans-serif; font-size: 16px; line-height: 15px; 
+                                                            text-decoration: none; text-align: center; padding: 16px 32px; color: #ffffff; display: block; border-radius: 10px;">
+                                                Get advice
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    </tr>
+                                </table>
+                                <!-- Button : END -->
+        </div>
         </div>
         <!--[if mso]>
                     </td>
