--- a/src/comparisonTable.html
+++ b/src/comparisonTable.html
@@ -337,7 +337,7 @@
 
                                 <div style="float: left; width: 45%; height: auto;" class="full-width clear">
                                     <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="50%"
-                                        margin="0">
+                                        margin="0" style="table-layout: unset !important;">
                                         <tr>
                                             <td dir="ltr"
                                                 style="font-family: sans-serif; font-size: 15px; color: #555555; text-align: center;"
